clusters/prod-cluster/organizations/numinia/crimson-tower/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperfy2-numinia-crimson-tower-deployment
  namespace: numinia
  labels:
    app: hyperfy2-numinia-crimson-tower
    environment: prod
    component: game-world
  annotations:
    keda.sh/auto-scaling: "enabled"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crimson-tower
      environment: pro
      component: game-world
  template:
    metadata:
      labels:
        app: crimson-tower
        environment: pro
        component: game-world
    spec:
      serviceAccountName: aws-secret-manager-sa
      imagePullSecrets:
        - name: github/deploy
      nodeSelector:
        NodeType: memory
      tolerations:
        - key: workload
          value: memory
          effect: NoSchedule
      volumes:
        - name: hyperfy2-persistent-storage
          persistentVolumeClaim:
            claimName: numinia-shared-pvc
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: hyperfy2-numinia-crimson-tower-aws-secrets
      containers:
        - name: hyperfy2-numinia-crimson-tower
          image: ghcr.io/numengames/numinia-hyperfy2:sha-3eb1f82755fae4b185171dc7109e89f4ab8982d3
          volumeMounts:
            - name: hyperfy2-persistent-storage
              mountPath: /mnt/hyperfy2-persistent-storage
              subPath: crimson-tower
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
          resources:
            requests:
              memory: ${MEMORY}
              cpu: ${CPU}
            limits:
              memory: ${LIMITS_MEMORY}
              cpu: ${LIMITS_CPU}
